# cn-roscs-ros-pkg

./: .gitignore  ProjectHome.md  cn-all.rosinstall  rosdep.yaml  stack.xml
roscs/: CMakeLists.txt  mainpage.dox  manifest.xml
roscs/apidoc/: index.html
roscs/apidoc/RosCS/: Node.html  Publisher.html  RosSharp.html  Timer.html  index.html
roscs/cmake/: cncs.cmake
roscs/include/: CsAdvertiseService.h  CsSubscriber.h  Runable.h
roscs/src/codegen/: Constant.cs  GenerateCXCode.cs  GenerateCXServices.cs  Message.cs  MessageField.cs  QueryDependencies.cs  Service.cs  ServiceField.cs  cpp.types  csharp.types
roscs/templates/messages/: Message.cs  Node.cs  Publisher.cs  RosSharp.cs  Subscriber.cs.pm  Timer.cs  roscs.cpp
roscs/templates/services/: AbstractService.cs  Service.cs  ServiceAdvertise.cs.pm  ServiceClient.cs  ServiceServer.cs  roscs.cpp
